<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        >

        <TextView
            android:id="@+id/tv_doc_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_doc_number"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:padding="2dp"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/tv_doc_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_doc_date"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="2dp"
            />

        <TextView
            android:id="@+id/tv_doc_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_doc_items"
            android:textColor="@color/colorGrey"
            android:layout_below="@+id/tv_doc_number"
            android:layout_marginStart="10dp"
            />

    </RelativeLayout>



</androidx.cardview.widget.CardView>