<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/LighterCyan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/linear_layout_border_lines">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_title"
                android:textSize="15dp"
                />

            <TextView
                android:id="@+id/tv_open_date"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onClickDate"
                android:text="@string/sample_date_time"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:paddingLeft="4dp"
                android:background="@drawable/image_borders"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_title"
                android:textSize="15dp"
                android:paddingLeft="20dp"
                />

            <TextView
                android:id="@+id/tv_open_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:background="@drawable/image_borders"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_layout_border_lines"
            android:paddingStart="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.7"
                android:gravity="start|center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_income"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <Switch
                    android:id="@+id/sw_in_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/activity_outcome"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/design_default_color_error"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.2"
                android:text="@string/save_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="onClickSaveDocument"
                android:drawableLeft="@drawable/ic_save"
                android:drawablePadding="3dp"
                />

        </LinearLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_doc_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_add_item_line"
            android:onClick="onDocClickAddItem"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>