<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_edge">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?android:attr/windowBackground">

            <TextView
                android:id="@+id/tv_item_enum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:layout_marginTop="4dp"
                android:text="@string/sample_numbering"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <AutoCompleteTextView
                android:id="@+id/ac_tv_item"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/tv_item_enum"
                android:minWidth="150dp"
                android:padding="6dp"
                android:maxLines="1"
                android:text="@string/sample_item"
                android:textSize="28sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintStart_toEndOf="@+id/tv_item_enum"
                app:layout_constraintTop_toTopOf="@+id/tv_item_enum" />

            <EditText
                android:id="@+id/et_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="4dp"
                android:inputType="number"
                android:padding="6dp"
                android:text="@string/sample_item_count"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.777"
                app:layout_constraintStart_toEndOf="@+id/ac_tv_item"
                app:layout_constraintTop_toTopOf="@+id/tv_item_enum" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>